--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-## The following requirements were added by pip freeze:
-blinker==1.7.0
+blinker==1.8.2
+-e git+https://github.com/bitcraze/crazyflie-lib-python.git@c7eaabe31612e796fcdcf8511c18d197051e17cd#egg=cflib
 click==8.1.7
 Flask==3.0.3
 flask-sock==0.7.0
 h11==0.14.0
 itsdangerous==2.2.0
-Jinja2==3.1.3
+Jinja2==3.1.4
+libusb-package==1.0.26.1
 MarkupSafe==2.1.5
 numpy==1.26.4
-openvino==2024.0.0
-openvino-telemetry==2024.1.0
-packaging==24.0
+pyusb==1.2.1
 PyYAML==6.0.1
+scipy==1.13.1
 simple-websocket==1.0.0
-Werkzeug==3.0.2
+Werkzeug==3.0.3
 wsproto==1.2.0
