--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ Jinja2==3.1.4
 libusb-package==1.0.26.1
 MarkupSafe==2.1.5
 numpy==1.26.4
+pyjoystick==1.2.4
+PySDL2==0.9.16
 pyusb==1.2.1
 PyYAML==6.0.1
+resource-man==2.2.8
 scipy==1.13.1
 simple-websocket==1.0.0
 Werkzeug==3.0.3
