--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ PySDL2==0.9.16
 pysdl2-dll==2.24.0
 pyserial==3.5
 pyusb==1.2.1
-PyYAML==6.0.1
 pyzmq==25.1.2
+pyjoystick==1.2.4
+PyYAML==6.0.1
+resource-man==2.2.8
 scipy==1.13.1
 setuptools==70.0.0
 simple-websocket==1.0.0
